<resources>
    <string name="app_name">한빛성경암송</string>
    <string name="main_title">SAN DIEGO HANBIT CHURCH</string>
    <string name="t_mem">암송모드</string>
    <string name="t_hint">힌트</string>
    <string name="t_answer">전체보기</string>
    <string name="t_home">Home</string>
    <string name="t_rand">모의시험</string>
    <string name="t_day">오늘의 성경구절</string>
    <string name="t_A">A. 새로운 삶</string>
    <string name="t_B">B. 그리스도를 전파함</string>
    <string name="t_C">C. 하나님을 의뢰함</string>
    <string name="t_D">D. 그리스도 제자의 자격</string>
    <string name="t_E">E. 그리스도를 닮아 감</string>
    <string name="t_goA">A</string>
    <string name="t_goB">B</string>
    <string name="t_goC">C</string>
    <string name="t_goD">D</string>
    <string name="t_goE">E</string>
    <string name="t_Aa">중심되신 그리스도</string>
    <string name="t_A1t">고린도후서 5:17</string>
    <string name="t_A1c">그런즉 누구든지 그리스도 안에 있으면 새로운 피조물이라. 이전 것은 지나갔으니, 보라 새것이 되었도다.</string>
    <string name="t_A1h">그ㅁㅁ 누ㅁㅁㅁ 그ㅁㅁㅁ 안ㅁ 있ㅁㅁ 새ㅁㅁ 피ㅁㅁㅁㅁ. 이ㅁ 것ㅁ 지ㅁㅁㅁㅁ, 보ㅁ 새ㅁㅁ 되ㅁㅁㅁ.</string>
    <string name="t_A1z">ㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁㅁ. ㅁㅁ ㅁㅁ ㅁㅁㅁㅁㅁ, ㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ.</string>
    <string name="t_A2t">갈라디아서 2:20</string>
    <string name="t_A2c">내가 그리스도와 함께 십자가에 못 박혔나니, 그런즉 이제는 내가 산것이 아니요 오직 내안에 그리스도께서 사신 것이라. 이제 내가 육체 가운데 사는 것은 나를 사랑하사 나를 위하여 자기 몸을 버리신 하나님의 아들을 믿는 믿음안에서 사는 것이라.</string>
    <string name="t_A2h">내ㅁ 그ㅁㅁㅁㅁ 함ㅁ 십ㅁㅁㅁ 못 박ㅁㅁㅁ, 그ㅁㅁ 이ㅁㅁ 내ㅁ 산ㅁㅁ 아ㅁㅁ 오ㅁ 내ㅁㅁ 그ㅁㅁㅁㅁㅁ 사ㅁ 것ㅁㅁ. 이ㅁ 내ㅁ 육ㅁ 가ㅁㅁ 사ㅁ 것ㅁ 나ㅁ 사ㅁㅁㅁ 나ㅁ 위ㅁㅁ 자ㅁ 몸ㅁ 버ㅁㅁ 하ㅁㅁㅁ 아ㅁㅁ 믿ㅁ 믿ㅁㅁㅁㅁ 사ㅁ 것ㅁㅁ.</string>
    <string name="t_A2z">ㅁㅁ.ㅁㅁㅁㅁㅁ ㅁㅁ ㅁㅁㅁㅁ ㅁ ㅁㅁㅁㅁ, ㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁㅁㅁ ㅁㅁ ㅁㅁㅁ. ㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁㅁㅁ ㅁㅁ ㅁㅁㅁ.</string>
    <string name="t_Ab">그리스도께 순종</string>
    <string name="t_A3t">로마서 12:1</string>
    <string name="t_A3c">그러므로 형제들아, 내가 하나님의 모든 자비하심으로 너희를 권하노니, 너희 몸을 하나님이 기뻐하시는 거룩한 산제사로 드리라. 이는 너희의 드릴 영적 예배니라.</string>
    <string name="t_A3h">그ㅁㅁㅁ 형ㅁㅁㅁ, 내ㅁ 하ㅁㅁㅁ 모든 자ㅁㅁㅁㅁㅁ 너ㅁㅁ 권ㅁㅁㅁ, 너ㅁ 몸ㅁ 하ㅁㅁㅁ 기ㅁㅁㅁㅁ 거ㅁㅁ 산ㅁㅁㅁ 드ㅁㅁ. 이ㅁ 너ㅁㅁ 드ㅁ 영ㅁ 예ㅁㅁㅁ.</string>
    <string name="t_A3z">ㅁㅁㅁㅁ ㅁㅁㅁㅁ, ㅁㅁ ㅁㅁㅁㅁ ㅁㅁ ㅁㅁㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ, ㅁㅁ ㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ. ㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁㅁ.</string>
    <string name="t_A4t">요한복음 14:21</string>
    <string name="t_A4c">나의 계명을 가지고 지키는 자라야 나를 사랑하는 자니, 나를 사랑하는 자는 내 아버지께 사랑을 받을 것이요 나도 그를 사랑하여 그에게 나를 나타내리라.</string>
    <string name="t_A4h">나의 계명을 가지고 지키는 자라야 나를 사랑하는 자니, 나를 사랑하는 자는 내 아버지께 사랑을 받을 것이요 나도 그를 사랑하여 그에게 나를 나타내리라.</string>
    <string name="t_A4z">ㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁㅁ ㅁㅁ, ㅁㅁ ㅁㅁㅁㅁ ㅁㅁ ㅁ ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁㅁㅁ.</string>
    <string name="t_Ac">말씀</string>
    <string name="t_A5t">디모데후서 3:16</string>
    <string name="t_A5c">모든 성경은 하나님의 감동으로 된 것으로, 교훈과 책망과 바르게 함과 의로 교육하기에 유익하니.</string>
    <string name="t_A5h">모ㅁ 성ㅁㅁ 하ㅁㅁㅁ 감ㅁㅁㅁ 된 것ㅁㅁ, 교ㅁㅁ 책ㅁㅁ 바ㅁㅁ 함ㅁ 의ㅁ 교ㅁㅁㅁㅁ 유ㅁㅁㅁ.</string>
    <string name="t_A5z">ㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁㅁ ㅁ ㅁㅁㅁ, ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁㅁㅁ ㅁㅁㅁㅁ.</string>
    <string name="t_A6t">여호수아 1:8</string>
    <string name="t_A6c">이 율법책을 네 입에서 떠나지 말게 하며 주야로 그것을 묵상하여 그 가운데 기록한 대로 다 지켜 행하라. 그리하면 네 길이 평탄하게 될 것이라. 네가 형통하리라.</string>
    <string name="t_A6h">이 율ㅁㅁㅁ 네 입ㅁㅁ 떠ㅁㅁ 말ㅁ 하ㅁ 주ㅁㅁ 그ㅁㅁ 묵ㅁㅁㅁ 그 가ㅁㅁ 기ㅁㅁ 대ㅁ 다 지ㅁ 행ㅁㅁ. 그ㅁㅁㅁ 네 길ㅁ 평ㅁㅁㅁ 될 것ㅁㅁ. 네ㅁ 형ㅁㅁㅁㅁ.</string>
    <string name="t_A6z">ㅁ ㅁㅁㅁㅁ ㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ ㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁ ㅁㅁ ㅁㅁㅁ. ㅁㅁㅁㅁ ㅁ ㅁㅁ ㅁㅁㅁㅁ ㅁ ㅁㅁㅁ. ㅁㅁ ㅁㅁㅁㅁㅁ.</string>
    <string name="t_Ad">기도</string>
    <string name="t_A7t">요한복음 15:7</string>
    <string name="t_A7c">너희가 내안에 거하고 내 말이 너희 안에 거하면 무엇이든지 원하는 대로 구하라. 그리하면 이루리라.</string>
    <string name="t_A7h">너ㅁㅁ 내ㅁㅁ 거ㅁㅁ 내 말ㅁ 너ㅁ 안ㅁ 거ㅁㅁ 무ㅁㅁㅁㅁ 원ㅁㅁ 대ㅁ 구ㅁㅁ. 그ㅁㅁㅁ 이ㅁㅁㅁ.</string>
    <string name="t_A7z">ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁ ㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁ. ㅁㅁㅁㅁ ㅁㅁㅁㅁ.</string>
    <string name="t_A8t">빌립보서 4:6,7</string>
    <string name="t_A8c">아무것도 염려하지 말고 오직 모든 일에 기도와 간구로 너희 구할 것을 감사함으로 하나님께 아뢰라. 그리하면 모든 지각에 뛰어난 하나님의 평강이 그리스도 예수 안에서 너희 마음과 생각을 지키시리라.</string>
    <string name="t_A8h">아ㅁㅁㅁ 염ㅁㅁㅁ 말ㅁ 오ㅁ 모ㅁ 일ㅁ 기ㅁㅁ 간ㅁㅁ 너ㅁ 구ㅁ 것ㅁ 감ㅁㅁㅁㅁ 하ㅁㅁㅁ 아ㅁㅁ. 그ㅁㅁㅁ 모ㅁ 지ㅁㅁ 뛰ㅁㅁ 하ㅁㅁㅁ 평ㅁㅁ 그ㅁㅁㅁ 예ㅁ 안ㅁㅁ 너ㅁ 마ㅁㅁ 생ㅁㅁ 지ㅁㅁㅁㅁ.</string>
    <string name="t_A8z">ㅁㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ. ㅁㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁㅁ.</string>
    <string name="t_Ae">교제</string>
    <string name="t_A9t">마태복음 18:20</string>
    <string name="t_A9c">두세 사람이 내이름으로 모인 곳에는 나도 그들 중에 있느니라.</string>
    <string name="t_A9h">두ㅁ 사ㅁㅁ 내ㅁㅁㅁㅁ 모ㅁ 곳ㅁㅁ 나ㅁ 그ㅁ 중ㅁ 있ㅁㅁㅁ.</string>
    <string name="t_A9z">ㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁㅁ.</string>
    <string name="t_A10t">히브리서 10:24,25</string>
    <string name="t_A10c">서로 돌아보아 사랑과 선행을 격려하며, 모이기를 폐하는 어떤 사람들의 습관과 같이 하지말고, 오직 권하여 그날이 가까움을 볼수록 더욱 그리하자.</string>
    <string name="t_A10h">서ㅁ 돌ㅁㅁㅁ 사ㅁㅁ 선ㅁㅁ 격ㅁㅁㅁ, 모ㅁㅁㅁ 폐ㅁㅁ 어ㅁ 사ㅁㅁㅁ 습ㅁㅁ 같ㅁ 하ㅁㅁㅁ, 오ㅁ 권ㅁㅁ 그ㅁㅁ 가ㅁㅁㅁ 볼ㅁㅁ 더ㅁ 그ㅁㅁㅁ.</string>
    <string name="t_A10z">ㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ, ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁㅁ, ㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁㅁ.</string>
    <string name="t_Af">증거</string>
    <string name="t_A11t">마태복음 4:19</string>
    <string name="t_A11c">말씀하시되, 나를 따라오너라 내가 너희로 사람을 낚는 어부가 되게 하리라 하시니.</string>
    <string name="t_A11h">말ㅁㅁㅁㅁ, 나ㅁ 따ㅁㅁㅁㅁ 내ㅁ 너ㅁㅁ 사ㅁㅁ 낚ㅁ 어ㅁㅁ 되ㅁ 하ㅁㅁ 하ㅁㅁ.</string>
    <string name="t_A11z">ㅁㅁㅁㅁㅁ, ㅁㅁ ㅁㅁㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁ.</string>
    <string name="t_A12t">로마서 1:16</string>
    <string name="t_A12c">내가 복음을 부끄러워하지 아니하노니, 이복음은 모든 믿는 자에게 구원을 주시는 하나님의 능력이 됨이라. 첫째는 유대인에게요 또한 헬라인에게로다.</string>
    <string name="t_A12h">내ㅁ 복ㅁㅁ 부ㅁㅁㅁㅁㅁ 아ㅁㅁㅁㅁ, 이ㅁㅁㅁ 모ㅁ 믿ㅁ 자ㅁㅁ 구ㅁㅁ 주ㅁㅁ 하ㅁㅁㅁ 능ㅁㅁ 됨ㅁㅁ. 첫ㅁㅁ 유ㅁㅁㅁㅁㅁ 또ㅁ 헬ㅁㅁㅁㅁㅁㅁ.</string>
    <string name="t_A12z">ㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁㅁㅁ ㅁㅁㅁㅁㅁ, ㅁㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ. ㅁㅁㅁ ㅁㅁㅁㅁㅁㅁ ㅁㅁ ㅁㅁㅁㅁㅁㅁㅁ.</string>
    <string name="t_Ba">모든 사람이 죄를 범함</string>
    <string name="t_B1t">로마서 3:23</string>
    <string name="t_B1c">모든 사람이 죄를 범하였으매 하나님의 영광에 이르지 못하더니.</string>
    <string name="t_B1h">모ㅁ 사ㅁㅁ 죄ㅁ 범ㅁㅁㅁㅁ 하ㅁㅁㅁ 영ㅁㅁ 이ㅁㅁ 못ㅁㅁㅁ.</string>
    <string name="t_B1z">ㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ.</string>
    <string name="t_B2t">이사야 53:6</string>
    <string name="t_B2c">우리는 다 양 같아서 그릇 행하여 각기 제 길로 갔거늘, 여호와께서는 우리 무리의 죄악을 그에게 담당시키셨도다.</string>
    <string name="t_B2h">우ㅁㅁ 다 양 같ㅁㅁ 그ㅁ 행ㅁㅁ 각ㅁ 제 길ㅁ 갔ㅁㅁ, 여ㅁㅁㅁㅁㅁ 우ㅁ 무ㅁㅁ 죄ㅁㅁ 그ㅁㅁ 담ㅁㅁㅁㅁㅁㅁ.</string>
    <string name="t_B2z">ㅁㅁㅁ ㅁ ㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁ ㅁㅁ ㅁㅁㅁ, ㅁㅁㅁㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁㅁㅁㅁ.</string>
    <string name="t_Bb">죄의 형벌</string>
    <string name="t_B3t">로마서 6:23</string>
    <string name="t_B3c">죄의 삯은 사망이요, 하나님의 은사는 그리스도 예수 우리 주 안에 있는 영생이니라.</string>
    <string name="t_B3h">죄ㅁ 삯ㅁ 사ㅁㅁㅁ, 하ㅁㅁㅁ 은ㅁㅁ 그ㅁㅁㅁ 예ㅁ 우ㅁ 주 안ㅁ 있ㅁ 영ㅁㅁㅁㅁ.</string>
    <string name="t_B3z">ㅁㅁ ㅁㅁ ㅁㅁㅁㅁ, ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁㅁㅁ.</string>
    <string name="t_B4t">히브리서 9:27</string>
    <string name="t_B4c">한 번 죽는 것은 사람에게 정하신 것이요, 그 후에는 심판이 있으리니.</string>
    <string name="t_B4h">한 번 죽ㅁ 것ㅁ 사ㅁㅁㅁ 정ㅁㅁ 것ㅁㅁ, 그 후ㅁㅁ 심ㅁㅁ 있ㅁㅁㅁ.</string>
    <string name="t_B4z">ㅁ ㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ, ㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ.</string>
    <string name="t_Bc">그리스도가 형벌을 받음</string>
    <string name="t_B5t">로마서 5:8</string>
    <string name="t_B5c">우리가 아직 죄인 되었을 때에 그리스도께서 우리를 위하여 죽으심으로 하나님께서 우리에게 대한 자기의 사람을 확증하셨느니라.</string>
    <string name="t_B5h">우ㅁㅁ 아ㅁ 죄ㅁ 되ㅁㅁ 때ㅁ 그ㅁㅁㅁㅁㅁ 우ㅁㅁ 위ㅁㅁ 죽ㅁㅁㅁㅁ 하ㅁㅁㅁㅁ 우ㅁㅁㅁ 대ㅁ 자ㅁㅁ 사ㅁㅁ 확ㅁㅁㅁㅁㅁㅁ.</string>
    <string name="t_B5z">ㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁㅁ ㅁㅁㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁㅁㅁㅁ.</string>
    <string name="t_B6t">베드로전서 3:18</string>
    <string name="t_B6c">그리스도께서도 한 번 죄를 위하여 죽으사 의인으로서 불의한 자를 대신하셨으니, 이는 우리를 하나님 앞으로 인도하려 하심이라. 육체로는 죽임을 당하시고 영으로는 살리심을 받으셨으니.</string>
    <string name="t_B6h">그ㅁㅁㅁㅁㅁㅁ 한 번 죄ㅁ 위ㅁㅁ 죽ㅁㅁ 의ㅁㅁㅁㅁ 불ㅁㅁ 자ㅁ 대ㅁㅁㅁㅁㅁ, 이ㅁ 우ㅁㅁ 하ㅁㅁ 앞ㅁㅁ 인ㅁㅁㅁ 하ㅁㅁㅁ. 육ㅁㅁㅁ 죽ㅁㅁ 당ㅁㅁㅁ 영ㅁㅁㅁ 살ㅁㅁㅁ 받ㅁㅁㅁㅁ.</string>
    <string name="t_B6z">ㅁㅁㅁㅁㅁㅁㅁ ㅁ ㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁㅁㅁㅁ, ㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁㅁ. ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁㅁㅁ.</string>
    <string name="t_Bd">선행으로 구원받지 못함</string>
    <string name="t_B7t">에베소서 2:8,9</string>
    <string name="t_B7c">너희가 그 은혜를 인하여 믿음으로 말미암아 구원을 얻었나니, 이것이 너희에게서 난 것이 아니요 하나님의 선물이라. 행위에서 난 것이 아니니, 이는 누구든지 자랑치 못하게 함이니라.</string>
    <string name="t_B7h">너ㅁㅁ 그 은ㅁㅁ 인ㅁㅁ 믿ㅁㅁㅁ 말ㅁㅁㅁ 구ㅁㅁ 얻ㅁㅁㅁ, 이ㅁㅁ 너ㅁㅁㅁㅁ 난 것ㅁ 아ㅁㅁ 하ㅁㅁㅁ 선ㅁㅁㅁ. 행ㅁㅁㅁ 난 것ㅁ 아ㅁㅁ, 이ㅁ 누ㅁㅁㅁ 자ㅁㅁ못ㅁㅁ 함ㅁㅁㅁ.</string>
    <string name="t_B7z">ㅁㅁㅁ ㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ, ㅁㅁㅁ ㅁㅁㅁㅁㅁ ㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁㅁ. ㅁㅁㅁㅁ ㅁ ㅁㅁ ㅁㅁㅁ, ㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ.</string>
    <string name="t_B8t">디도서 3:5</string>
    <string name="t_B8c">우리를 구원하시되 우리의 행한바 의로운 행위로 말미암지 아니하고, 오직 그의 긍휼하심을 좇아 중생의 씻음과 성령의 새롭게 하심으로 하셨나니.</string>
    <string name="t_B8h">우ㅁㅁ 구ㅁㅁㅁㅁ 우ㅁㅁ 행ㅁㅁ 의ㅁㅁ 행ㅁㅁ 말ㅁㅁㅁ 아ㅁㅁㅁ, 오ㅁ 그ㅁ 긍ㅁㅁㅁㅁ 좇ㅁ 중ㅁㅁ 씻ㅁㅁ 성ㅁㅁ 새ㅁㅁ 하ㅁㅁㅁ 하ㅁㅁㅁ.</string>
    <string name="t_B8z">ㅁㅁㅁ ㅁㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁㅁ, ㅁㅁ ㅁㅁ ㅁㅁㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁㅁ.</string>
    <string name="t_Be">그리스도를 모셔야 함</string>
    <string name="t_B9t">요한복음 1:12</string>
    <string name="t_B9c">영접하는 자 곧 그 이름을 믿는 자들에게는 하나님의 자녀가 되는 권세를 주셨으니.</string>
    <string name="t_B9h">영ㅁㅁㅁ 자 곧 그 이ㅁㅁ 믿ㅁ 자ㅁㅁㅁㅁ 하ㅁㅁㅁ 자ㅁㅁ 되ㅁ 권ㅁㅁ 주ㅁㅁㅁ.</string>
    <string name="t_B9z">ㅁㅁㅁㅁ ㅁ ㅁ ㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ.</string>
    <string name="t_B10t">요한계시록 3:20</string>
    <string name="t_B10c">볼지어다. 내가 문밖에 서서 두드리노니, 누구든지 내 음성을 듣고 문을 열면 내가 그에게로 들어가 그로 더불어 먹고 그는 나로 더불어 먹으리라.</string>
    <string name="t_B10h">볼ㅁㅁㅁ. 내ㅁ 문ㅁㅁ 서ㅁ 두ㅁㅁㅁㅁ, 누ㅁㅁㅁ 내 음ㅁㅁ 듣ㅁ 문ㅁ 열ㅁ 내ㅁ 그ㅁㅁㅁ 들ㅁㅁ 그ㅁ 더ㅁㅁ 먹ㅁ 그ㅁ 나ㅁ 더ㅁㅁ 먹ㅁㅁㅁ.</string>
    <string name="t_B10z">ㅁㅁㅁㅁ. ㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁㅁㅁ, ㅁㅁㅁㅁ ㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ.</string>
    <string name="t_Bf">구원의 확신</string>
    <string name="t_B11t">요한일서 5:13</string>
    <string name="t_B11c">내가 하나님의 아들의 이름을 믿는 너희에게 이것을 쓴 것은, 너희로 하여금 너희에게 영생이 있음을 알게 하려 함이라.</string>
    <string name="t_B11h">내ㅁ 하ㅁㅁㅁ 아ㅁㅁ 이ㅁㅁ 믿ㅁ 너ㅁㅁㅁ 이ㅁㅁ 쓴 것ㅁ, 너ㅁㅁ 하ㅁㅁ 너ㅁㅁㅁ 영ㅁㅁ 있ㅁㅁ 알ㅁ 하ㅁ 함ㅁㅁ.</string>
    <string name="t_B11z">ㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ ㅁ ㅁㅁ, ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁ.</string>
    <string name="t_B12t">요한복음 5:24</string>
    <string name="t_B12c">내가 진실로 진실로 너희에게 이르노니, 내 말을 듣고 또 나 보내신 이를 믿는 자는 영생을 얻었고 심판에 이르지 아니하나니 사망에서 생명으로 옮겼느니라.</string>
    <string name="t_B12h">내ㅁ 진ㅁㅁ 진ㅁㅁ 너ㅁㅁㅁ 이ㅁㅁㅁ, 내 말ㅁ 듣ㅁ 또 나 보ㅁㅁ 이ㅁ 믿ㅁ 자ㅁ 영ㅁㅁ 얻ㅁㅁ 심ㅁㅁ 이ㅁㅁ 아ㅁㅁㅁㅁ 사ㅁㅁㅁ 생ㅁㅁㅁ 옮ㅁㅁㅁㅁ.</string>
    <string name="t_B12z">ㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁㅁ, ㅁ ㅁㅁ ㅁㅁ ㅁ ㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁㅁㅁ.</string>
    <string name="t_Ca">성령 </string>
    <string name="t_C1t">고린도전서 3:16 </string>
    <string name="t_C1c">너희가 하나님의 성전인 것과 하나님의 성령이 너희 안에 거하시는 것을 알지 못하느뇨.</string>
    <string name="t_C1h">너ㅁㅁ 하ㅁㅁㅁ 성ㅁㅁ 것ㅁ 하ㅁㅁㅁ 성ㅁㅁ 너ㅁ 안ㅁ 거ㅁㅁㅁ 것ㅁ 알ㅁ 못ㅁㅁㅁ.</string>
    <string name="t_C1z">ㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁㅁ.</string>
    <string name="t_C2t">고린도전서 2:12 </string>
    <string name="t_C2c">우리가 세상의 영을 받지 아니하고 오직 하나님께로 온 영을 받았으니, 이는 우리로 하여금 하나님께서 우리에게 은혜로 주신 것들을 알게 하려 하심이라.</string>
    <string name="t_C2h">우ㅁㅁ 세ㅁㅁ 영ㅁ 받ㅁ 아ㅁㅁㅁ 오ㅁ 하ㅁㅁㅁㅁ 온 영ㅁ 받ㅁㅁㅁ, 이ㅁ 우ㅁㅁ 하ㅁㅁ 하ㅁㅁㅁㅁ 우ㅁㅁㅁ 은ㅁㅁ 주ㅁ 것ㅁㅁ 알ㅁ 하ㅁ 하ㅁㅁㅁ.</string>
    <string name="t_C2z">ㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁㅁ ㅁㅁ ㅁㅁㅁㅁㅁ ㅁ ㅁㅁ ㅁㅁㅁㅁ, ㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁㅁㅁ.</string>
    <string name="t_Cb">능력</string>
    <string name="t_C3t">이사야 41:10</string>
    <string name="t_C3c">두려워 말라. 내가 너와 함께함이니라. 놀라지 말라. 나는 네 하나님이 됨이니라. 내가 너를 굳세게 하리라. 참으로 너를 도와주리라. 참으로 나의 의로운 오른손으로 너를 붙들리라.</string>
    <string name="t_C3h">두ㅁㅁ 말ㅁ. 내ㅁ 너ㅁ 함ㅁㅁㅁㅁㅁ. 놀ㅁㅁ 말ㅁ. 나ㅁ 네 하ㅁㅁㅁ 됨ㅁㅁㅁ. 내ㅁ 너ㅁ 굳ㅁㅁ 하ㅁㅁ. 참ㅁㅁ 너ㅁ 도ㅁㅁㅁㅁ. 참ㅁㅁ 나ㅁ 의ㅁㅁ 오ㅁㅁㅁㅁ 너ㅁ 붙ㅁㅁㅁ.</string>
    <string name="t_C3z">ㅁㅁㅁ ㅁㅁ. ㅁㅁ ㅁㅁ ㅁㅁㅁㅁㅁㅁ. ㅁㅁㅁ ㅁㅁ. ㅁㅁ ㅁ ㅁㅁㅁㅁ ㅁㅁㅁㅁ. ㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁ. ㅁㅁㅁ ㅁㅁ ㅁㅁㅁㅁㅁ. ㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁㅁ ㅁㅁ ㅁㅁㅁㅁ.</string>
    <string name="t_C4t">빌립보서 4:13</string>
    <string name="t_C4c">내게 능력 주시는 자 안에서 내가 모든 것을 할 수 있느니라.</string>
    <string name="t_C4h">내ㅁ 능ㅁ 주ㅁㅁ 자 안ㅁㅁ 내ㅁ 모ㅁ 것ㅁ 할 수 있ㅁㅁㅁ.</string>
    <string name="t_C4z">ㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁ ㅁㅁㅁ ㅁㅁ ㅁㅁ ㅁㅁ ㅁ ㅁ ㅁㅁㅁㅁ.</string>
    <string name="t_Cc">성실</string>
    <string name="t_C5t">예레미야애가 3:22,23</string>
    <string name="t_C5c">여호와의 자비와 긍휼이 무궁하시므로 우리가 진멸되지 아니함이니이다. 이것이 아침마다 새로우니 주의 성실이 크도소이다.</string>
    <string name="t_C5h">여ㅁㅁㅁ 자ㅁㅁ 긍ㅁㅁ 무ㅁㅁㅁㅁㅁ 우ㅁㅁ 진ㅁㅁㅁ 아ㅁㅁㅁㅁㅁㅁ. 이ㅁㅁ 아ㅁㅁㅁ 새ㅁㅁㅁ 주ㅁ 성ㅁㅁ 크ㅁㅁㅁㅁ.</string>
    <string name="t_C5z">ㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁㅁㅁㅁㅁ. ㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁㅁㅁ ㅁㅁ ㅁㅁㅁ ㅁㅁㅁㅁㅁ.</string>
    <string name="t_C6t">민수기 23:19 </string>
</resources>