<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/getty"
        >

    <TextView
            android:id="@+id/t_A"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_A"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="7dip"
            android:textSize="12pt"
            android:textColor="#7FAF1B"
            android:textStyle="bold"
            android:shadowColor="#000000"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:gravity="center_horizontal"
            />
    <TextView
            android:id="@+id/t_Aa"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_Aa"
            android:layout_marginTop="2dip"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="7dip"
            android:textSize="10pt"
            android:textColor="#FBB829"
            android:textStyle="bold"
            android:shadowColor="#000000"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:gravity="center_horizontal"
            />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="5dp"
                  android:layout_marginRight="5dp"
            >
    <Button
            android:id="@+id/button_A1"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/red_button"
            style="@style/ButtonText"
            android:text="@string/t_A1t"
            />
    <Button
            android:id="@+id/button_A2"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/red_button"
            style="@style/ButtonText"
            android:text="@string/t_A2t"
            />
    </LinearLayout>

    <TextView
            android:id="@+id/t_Ab"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_Ab"
            android:layout_marginTop="2dip"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="7dip"
            android:textSize="10pt"
            android:textColor="#FBB829"
            android:textStyle="bold"
            android:shadowColor="#000000"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:gravity="center_horizontal"
            />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="5dp"
                  android:layout_marginRight="5dp"
            >
    <Button
            android:id="@+id/button_A3"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/red_button"
            style="@style/ButtonText"
            android:text="@string/t_A3t"
            />
    <Button
            android:id="@+id/button_A4"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/red_button"
            style="@style/ButtonText"
            android:text="@string/t_A4t"
            />
    </LinearLayout>

    <TextView
            android:id="@+id/t_Ac"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_Ac"
            android:layout_marginTop="2dip"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="7dip"
            android:textSize="10pt"
            android:textColor="#FBB829"
            android:textStyle="bold"
            android:shadowColor="#000000"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:gravity="center_horizontal"
            />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="5dp"
                  android:layout_marginRight="5dp"
            >
    <Button
            android:id="@+id/button_A5"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/red_button"
            style="@style/ButtonText"
            android:text="@string/t_A5t"
            />
    <Button
            android:id="@+id/button_A6"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/red_button"
            style="@style/ButtonText"
            android:text="@string/t_A6t"
            />
    </LinearLayout>

    <TextView
            android:id="@+id/t_Ad"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_Ad"
            android:layout_marginTop="2dip"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="7dip"
            android:textSize="10pt"
            android:textColor="#FBB829"
            android:textStyle="bold"
            android:shadowColor="#000000"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:gravity="center_horizontal"
            />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="5dp"
                  android:layout_marginRight="5dp"
            >
    <Button
            android:id="@+id/button_A7"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/red_button"
            style="@style/ButtonText"
            android:text="@string/t_A7t"
            />
    <Button
            android:id="@+id/button_A8"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/red_button"
            style="@style/ButtonText"
            android:text="@string/t_A8t"
            />
    </LinearLayout>

    <TextView
            android:id="@+id/t_Ae"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_Ae"
            android:layout_marginTop="2dip"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="7dip"
            android:textSize="10pt"
            android:textColor="#FBB829"
            android:textStyle="bold"
            android:shadowColor="#000000"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:gravity="center_horizontal"
            />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="5dp"
                  android:layout_marginRight="5dp"
            >
    <Button
            android:id="@+id/button_A9"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/red_button"
            style="@style/ButtonText"
            android:text="@string/t_A9t"
            />
    <Button
            android:id="@+id/button_A10"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/red_button"
            style="@style/ButtonText"
            android:text="@string/t_A10t"
            />
    </LinearLayout>

    <TextView
            android:id="@+id/t_Af"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_Af"
            android:layout_marginTop="2dip"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="7dip"
            android:textSize="10pt"
            android:textColor="#FBB829"
            android:textStyle="bold"
            android:shadowColor="#000000"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:gravity="center_horizontal"
            />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="5dp"
                  android:layout_marginRight="5dp"
            >
    <Button
            android:id="@+id/button_A11"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/red_button"
            style="@style/ButtonText"
            android:text="@string/t_A11t"
            />
    <Button
            android:id="@+id/button_A12"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/red_button"
            style="@style/ButtonText"
            android:text="@string/t_A12t"
            />
    </LinearLayout>


</LinearLayout>
</ScrollView>