<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/skyyel2"
        >

<TextView
android:id="@+id/textView_common_title"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="Large Text"
android:textColor="#530D0D"
android:textSize="11pt"
android:textStyle="bold"
android:shadowColor="#FFC800"
android:shadowRadius="1"
android:shadowDx="1"
android:shadowDy="1"
android:textAppearance="?android:attr/textAppearanceLarge"
/>

    <TextView
            android:id="@+id/textView_common_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textColor="#000000"
            android:textSize="10pt"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

    <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

    <Button
            android:id="@+id/button_mem"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/dahong_button"
            style="@style/ButtonText"
            android:text="@string/t_mem"
            />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="5dp"
                  android:layout_marginRight="5dp"
            >
    <Button
            android:id="@+id/button_home"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_weight="0.9"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/vanilla_button"
            style="@style/ButtonTextH"
            android:text="@string/t_home"
            />
    <Button
            android:id="@+id/button_goA"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/red_button"
            style="@style/ButtonTextH"
            android:text="@string/t_goA"
            />

        <Button
                android:id="@+id/button_goB"
                android:layout_width="fill_parent"
                android:layout_height="35px"
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:paddingTop="7dp"
                android:background="@drawable/blue_button"
                style="@style/ButtonTextH"
                android:text="@string/t_goB"
                />
        <Button
                android:id="@+id/button_goC"
                android:layout_width="fill_parent"
                android:layout_height="35px"
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:paddingTop="7dp"
                android:background="@drawable/purple_button"
                style="@style/ButtonTextH"
                android:text="@string/t_goC"
                />
        <Button
                android:id="@+id/button_goD"
                android:layout_width="fill_parent"
                android:layout_height="35px"
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:paddingTop="7dp"
                android:background="@drawable/green_button"
                style="@style/ButtonTextH"
                android:text="@string/t_goD"
                />
        <Button
                android:id="@+id/button_goE"
                android:layout_width="fill_parent"
                android:layout_height="35px"
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:paddingTop="7dp"
                android:background="@drawable/yellow_button"
                style="@style/ButtonTextH"
                android:text="@string/t_goE"
                />
    </LinearLayout>
</LinearLayout>



