<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/main"
    >
    <ImageView
            android:id="@+id/imageView1"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_marginTop="5dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:src="@drawable/hanbit_bible" />
    <TextView
    android:id="@+id/title"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="하나님의 말씀을 오래 기억하기 위해 시간을 투자해서 성경 구절을 암기하는 것보다 더 유익한 방법은 없다.\n-Dawson Trotman- "
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:layout_marginBottom="5dip"
    android:textSize="8pt"
    android:textColor="#FBB829"
    android:textStyle="bold"
    android:shadowColor="#000000"
    android:shadowRadius="1"
    android:shadowDx="1"
    android:shadowDy="1"
    />
    <TextView
            android:id="@+id/daybible"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="일일 성경"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:textSize="9pt"
            android:textColor="#C3FF68"
            android:textStyle="bold"
            android:shadowColor="#000000"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:gravity="center_horizontal"
            android:layout_marginBottom="2dip"
            />
    <Button
            android:id="@+id/button_day"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/nam_button"
            style="@style/ButtonText"
            android:text="@string/t_day"
            android:layout_marginBottom="5dip"
            />
    <TextView
            android:id="@+id/biblemem"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="성경암송"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:textSize="9pt"
            android:textColor="#C3FF68"
            android:textStyle="bold"
            android:shadowColor="#000000"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:gravity="center_horizontal"
            android:layout_marginBottom="2dip"
            />
<Button
    android:id="@+id/button_p_A"
    android:layout_width="fill_parent"
    android:layout_height="35px"
    android:layout_alignParentBottom="true"
    android:paddingTop="7dp"
    android:background="@drawable/red_button"
    style="@style/ButtonText"
    android:text="@string/t_A"
    android:layout_marginBottom="5dip"
        />
    <Button
            android:id="@+id/button_p_B"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/blue_button"
            style="@style/ButtonText"
            android:text="@string/t_B"
            android:layout_marginBottom="5dip"
            />
    <Button
            android:id="@+id/button_p_C"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/purple_button"
            style="@style/ButtonText"
            android:text="@string/t_C"
            android:layout_marginBottom="5dip"
            />
    <Button
            android:id="@+id/button_p_D"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/green_button"
            style="@style/ButtonText"
            android:text="@string/t_D"
            android:layout_marginBottom="5dip"
            />
    <Button
            android:id="@+id/button_p_E"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/yellow_button"
            style="@style/ButtonText"
            android:text="@string/t_E"
            android:layout_marginBottom="5dip"
            />

    <TextView
            android:id="@+id/daehoe"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="성경암송대회"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:textSize="9pt"
            android:textColor="#C3FF68"
            android:textStyle="bold"
            android:shadowColor="#000000"
            android:shadowRadius="1"
            android:shadowDx="1"
            android:shadowDy="1"
            android:gravity="center_horizontal"
            android:layout_marginBottom="2dip"
            />
    <Button
            android:id="@+id/button_rand"
            android:layout_width="fill_parent"
            android:layout_height="35px"
            android:layout_alignParentBottom="true"
            android:paddingTop="7dp"
            android:background="@drawable/black_button"
            style="@style/ButtonText"
            android:text="@string/t_rand"
            android:layout_marginBottom="10dip"
            />
</LinearLayout>
</ScrollView>
